--- a/force-app/main/default/aura/AccountCreationProgressBar/AccountCreationProgressBar.cmp
+++ b/force-app/main/default/aura/AccountCreationProgressBar/AccountCreationProgressBar.cmp
@@ -1,18 +1,15 @@
-<aura:component implements="force:appHostable">
+<aura:component implements="flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId ,force:appHostable" access="global">
     <aura:attribute name="currentStep" type="Integer" default="1"/>
     <aura:attribute name='fields' type='String[]' default="['Name','Email__c','Externalid__c']"/>
     <aura:attribute name='fieldscon' type='String[]' default="['AccountId','LastName']"/>
-    <aura:attribute name="accountId" type="String" />
-    <aura:attribute name="contactId" type="String" />
-    <aura:attribute name="eventId" type="String" />
     <aura:handler name="init" value="{!this}" action="{!c.init}"/>
     
     <aura:if isTrue="{!v.currentStep == 1}">
-        <lightning:recordForm objectApiName="Account" fields="{!v.fields}" mode="edit" recordId="{!v.accountId}" onsuccess="{!c.handleAccountSuccess}"/>
+        <lightning:recordForm objectApiName="Account" fields="{!v.fields}" mode="edit" recordId="{!v.accountId}"/>
     </aura:if>
     
     <aura:if isTrue="{!v.currentStep == 2}">
-        <lightning:recordForm objectApiName="Contact" fields="{!v.fieldscon}" mode="edit" recordId="{!v.contactId}" onload="{!c.handleContactLoad}"/>
+        <lightning:recordForm objectApiName="Contact" fields="{!v.fieldscon}" mode="edit" recordId="{!v.contactId}"/>
     </aura:if>
     
     <aura:if isTrue="{!v.currentStep == 3}">
@@ -23,3 +20,12 @@
     <lightning:button label="Previous" onclick="{!c.previousStep}" disabled="{!v.currentStep == 1}"/>
     <lightning:button label="Next" onclick="{!c.nextStep}" disabled="{!v.currentStep == 3}"/>
 </aura:component>
+
+<!-- <aura:component>
+    <lightning:progressIndicator currentStep="3" type="base" hasError="true" variant="base">
+        <lightning:progressStep label="Step 1" value="1"/>
+        <lightning:progressStep label="Step 2" value="2"/>
+        <lightning:progressStep label="Step 3" value="3"/>
+        <lightning:progressStep label="Step 4" value="4"/>
+    </lightning:progressIndicator>
+</aura:component> -->
