--- a/force-app/main/default/aura/AccountContactList/AccountContactList.cmp
+++ b/force-app/main/default/aura/AccountContactList/AccountContactList.cmp
@@ -1,4 +1,4 @@
-
+<!-- //Account contact List ->->-> Tab -->
 <aura:component controller="ContactListView" implements="flexipage:availableForAllPageTypes,force:appHostable,force:hasRecordId" access="global">
     <aura:attribute name="contacts" type="List"/>
     <aura:attribute name="currentPage" type="Integer" default="1"/>
@@ -17,11 +17,20 @@
         </lightning:layoutItem>
     </lightning:layout>
 
-    <lightning:input value="{!v.searchTerm}" label="Search" placeholder="Search Contacts..." onchange="{!c.search}"/>
-
-    <ul>
-        <aura:iteration items="{!v.contacts}" var="contact">
-            <li style="font-weight:bolder;">{!contact.Name}</li>
-        </aura:iteration>
-    </ul>
+    <lightning:input value="{!v.searchTerm}" label="Search" placeholder="Search Contacts..." onchange="{!c.search}"/>            
+            <Table style="border: solid 2px black;">
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+            <aura:iteration items="{!v.contacts}" var="contact">
+                <tr>
+                    <td>{!contact.Name}</td>
+                    <td>{!contact.Email}</td>
+                    <td>{!contact.Phone}</td>
+                </tr>
+            </aura:iteration>
+            </Table>
+       
 </aura:component>
