--- a/force-app/main/default/aura/AccountCreationProgressBar/AccountCreationProgressBar.cmp
+++ b/force-app/main/default/aura/AccountCreationProgressBar/AccountCreationProgressBar.cmp
@@ -1,4 +1,4 @@
-<aura:component implements="flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId ,force:appHostable" access="global">
+<!-- <aura:component implements="flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId ,force:appHostable" access="global">
     <aura:attribute name="currentStep" type="Integer" default="1"/>
     <aura:attribute name='fields' type='String[]' default="['Name','Email__c','Externalid__c']"/>
     <aura:attribute name='fieldscon' type='String[]' default="['AccountId','LastName']"/>
@@ -26,7 +26,7 @@
     
     <lightning:button label="Previous" onclick="{!c.previousStep}" disabled="{!v.currentStep == 1}"/>
     <lightning:button label="Next" onclick="{!c.nextStep}" disabled="{!v.currentStep == 3}"/>
-</aura:component>
+</aura:component> -->
 
 
 
@@ -62,3 +62,38 @@
     <lightning:button label="Next" onclick="{!c.nextStep}" disabled="{!v.currentStep == 3}"/>
 </aura:component>
  -->
+
+
+ <aura:component implements="flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,force:appHostable" access="global">
+    <aura:attribute name="currentStep" type="Integer" default="1"/>
+    <aura:attribute name='fields' type='String[]' default="['Name','Email__c','Externalid__c']"/>
+    <aura:attribute name='fieldscon' type='String[]' default="['AccountId','LastName']"/>
+    <aura:attribute name="fieldsevent" type="String[]" default="['WhoId','Subject','DateTime']"/>
+
+    <aura:handler name="init" value="{!this}" action="{!c.init}"/>
+
+    <lightning:progressIndicator currentStep="{!v.currentStep}" type="path" variant="base">
+        <lightning:progressStep label="Account Details" value="1"/>
+        <lightning:progressStep label="Contact Details" value="2"/>
+        <lightning:progressStep label="Event Creation" value="3"/>
+    </lightning:progressIndicator>
+
+    <aura:if isTrue="{!v.currentStep == 1}">
+        <lightning:recordForm objectApiName="Account" fields="{!v.fields}" mode="edit" recordId="{!v.recordId}"/>
+    </aura:if>
+
+    <aura:if isTrue="{!v.currentStep == 2}">
+        <lightning:recordForm objectApiName="Contact" fields="{!v.fieldscon}" mode="edit" recordId="{!v.recordId}"/>
+    </aura:if>
+
+    <aura:if isTrue="{!v.currentStep == 3}">
+        <!-- You had a typo here, correct attribute name is fieldsevent, not fieldsevent -->
+        <lightning:recordForm objectApiName="Event" fields="{!v.fieldsevent}" mode="edit" recordId="{!v.recordId}"/>
+        <lightning:button variant="brand" label="Save" onclick="{!c.createEvent}"/>
+    </aura:if>
+
+    <!-- Previous button should be disabled on the first step -->
+    <lightning:button label="Previous" onclick="{!c.previousStep}" disabled="{!v.currentStep == 1}"/>
+    <!-- Next button should be disabled on the last step -->
+    <lightning:button label="Next" onclick="{!c.nextStep}" disabled="{!v.currentStep == 3}"/>
+</aura:component>
